[ADD] World as option to country selection

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="content">
       <select id="countrySelect" class="cf-form-input">
+        <option value="WORLD">World</option>
         <option value="AF">Afghanistan</option>
         <option value="AX">Åland Islands</option>
         <option value="AL">Albania</option>
